PROPER FIX - fixed movie modal smooth scrolling on ios

--- a/src/components/movie/MovieThumb.css
+++ b/src/components/movie/MovieThumb.css
@@ -5,10 +5,13 @@
   max-width: 156px;
 }
 
+.movie-modal {
+  -webkit-overflow-scrolling: touch;
+}
+
 .movie-modal .modal-dialog {
   margin: 0;
   max-width: 100%;
-  -webkit-overflow-scrolling: touch;
 }
 
 .movie-modal .modal-content {
